--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.application.name=salesBackEndApp
 spring.datasource.url=jdbc:postgresql://localhost:5432
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=toor
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.format_sql = true
+spring.jpa.open-in-view=false
