--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=salesBackEndApp
-spring.datasource.url=jdbc:postgresql://localhost:5432
-spring.datasource.username=postgres
-spring.datasource.password=toor
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=vinz
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.format_sql = true
 spring.jpa.open-in-view=false
+
